Replace the scripting-based mime types compression mechanism with CMake
Use tools that compress mimetypes database directly from CMake as
a fallback mechanism instead of using perl and batch scripts.
Move the generating of the mimetype database resources to build-time.

This removes the perl-based compression from the possible compression
options. But assume that CMake-based compression should fill this gap.

CMake versions less than 3.26 don't support the value of the zstd
compression level higher than 9, so we prefer to use the External API.

Task-number: QTBUG-108438
Change-Id: I5686a53b766a243052cfee320f570e2c3b385726
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1236,167 +1236,50 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_permissions AND WASM
         kernel/qpermissions_wasm.cpp
 )
 
-
-#### Keys ignored in scope 171:.:mimetypes:mimetypes/mimetypes.pri:QT_FEATURE_mimetype:
-# MIME_DATABASE = "mimetypes/mime/packages/freedesktop.org.xml"
-# OTHER_FILES = "$$MIME_DATABASE"
-
-# special case begin
-# qt_internal_extend_target(Core CONDITION QT_FEATURE_mimetype AND QT_FEATURE_mimetype_database
-#        INCLUDE_DIRECTORIES
-#        .rcc
-#)
-# special case end
-
-#### Keys ignored in scope 172:.:mimetypes:mimetypes/mimetypes.pri:QT_FEATURE_mimetype_database:
-# QMAKE_EXTRA_COMPILERS = "mimedb"
-# mimedb.commands = "${QMAKE_FILE_IN}" ">" "${QMAKE_FILE_OUT}"
-# mimedb.depends = "$$PWD/mime/generate.pl"
-# mimedb.input = "MIME_DATABASE"
-# mimedb.output = "$$outpath/qmimeprovider_database.cpp"
-# mimedb.variable_out = "INCLUDED_SOURCES"
-
-#### Keys ignored in scope 173:.:mimetypes:mimetypes/mimetypes.pri:ANDROID:
-# outpath = "$$outpath/$${QT_ARCH}"
-
-#### Keys ignored in scope 175:.:mimetypes:mimetypes/mimetypes.pri:(CMAKE_BUILD_TYPE STREQUAL Debug):
-# outpath = "$$outpath/debug"
-
-#### Keys ignored in scope 176:.:mimetypes:mimetypes/mimetypes.pri:else:
-# outpath = "$$outpath/release"
-
-#### Keys ignored in scope 177:.:mimetypes:mimetypes/mimetypes.pri:MAKEFILE_GENERATOR___equals___MSVC.NET OR MAKEFILE_GENERATOR___equals___MSBUILD OR QMAKE_SH_ISEMPTY:
-# mimedb.commands = "cmd" "/c" "$$shell_path($$PWD/mime/generate.bat)"
-# mimedb.depends = "$$PWD/mime/generate.bat" "$$PWD/mime/hexdump.ps1"
-
-#### Keys ignored in scope 178:.:mimetypes:mimetypes/mimetypes.pri:else:
-# mimedb.commands = "perl" "$${mimedb.depends}"
-
-#### Keys ignored in scope 179:.:mimetypes:mimetypes/mimetypes.pri:QT_FEATURE_zstd:
-# mimedb.commands = "--zstd"
-# Resources:
-# special case begin
-# We can't specify the resources directly as we have unit tests that
-# depend on these as well and we no longer support the use of hand
-# edited qrc files.
 if(QT_FEATURE_mimetype AND QT_FEATURE_mimetype_database)
     include(${CMAKE_CURRENT_SOURCE_DIR}/mimetypes/mimetypes_resources.cmake)
 
-# Generate qmimeprovider_database.cpp
-    set(qmimeprovider_db_output_dir "${CMAKE_CURRENT_BINARY_DIR}/.rcc")
-    set(qmimeprovider_db_output "${qmimeprovider_db_output_dir}/qmimeprovider_database.cpp")
     if(CMAKE_VERSION VERSION_LESS 3.18 OR QT_AVOID_CMAKE_ARCHIVING_API)
-        set(command_args "")
-        set(mime_dir "${CMAKE_CURRENT_SOURCE_DIR}/mimetypes/mime")
-        set(command_depends "${mime_dir}/generate.pl" "${corelib_mimetypes_resource_file}")
-        if (MSVC)
-            list(APPEND command_args "${mime_dir}/generate.bat")
-            list(APPEND command_depends "${mime_dir}/generate.bat" "${mime_dir}/hexdump.ps1" )
-        else()
-            file(MAKE_DIRECTORY ${qmimeprovider_db_output_dir})
-            list(APPEND command_args perl "${mime_dir}/generate.pl" )
-        endif()
-
-        if (QT_FEATURE_zstd)
-            list(APPEND command_args "--zstd")
-        endif()
-
-        list(APPEND command_args "${corelib_mimetypes_resource_file}" ">" "${qmimeprovider_db_output}")
-
-        add_custom_command(OUTPUT "${qmimeprovider_db_output}"
-            DEPENDS ${command_depends}
-            COMMAND ${command_args}
-            COMMENT "Generating ${qmimeprovider_db_output}"
-            VERBATIM
-        )
+        set(archiving_api "External")
     else()
-        if(QT_FEATURE_zstd)
-            if(NOT QT_CMAKE_ZSTD_SUPPORT)
-                message(FATAL_ERROR
-                    "CMake was not built with zstd support. "
-                    "Rebuild CMake or set QT_AVOID_CMAKE_ARCHIVING_API=ON.")
-            endif()
-            set(qmime_db_compression Zstd)
-            string(APPEND qmime_db_content "#define MIME_DATABASE_IS_ZSTD\n")
-        else()
-            set(qmime_db_compression GZip)
-            string(APPEND qmime_db_content "#define MIME_DATABASE_IS_GZIP\n")
-        endif()
-
-        file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/.rcc")
-        get_filename_component(mime_types_resource_file "${corelib_mimetypes_resource_file}" NAME)
-
-        set(mimetypes_resource_file_minified "${CMAKE_CURRENT_BINARY_DIR}/.rcc/${mime_types_resource_file}")
-
-        set(mimetypes_resfile_timestamp_file "${CMAKE_CURRENT_BINARY_DIR}/.rcc/${mime_types_resource_file}.timestamp")
-        file(TIMESTAMP "${corelib_mimetypes_resource_file}" mimetypes_resfile_timestamp)
-
-        set(compute_db_archive ON)
-        if (EXISTS "${mimetypes_resfile_timestamp_file}")
-            file(READ "${mimetypes_resfile_timestamp_file}" old_mimetypes_resfile_timestamp)
-            if ("${mimetypes_resfile_timestamp}" STREQUAL "${old_mimetypes_resfile_timestamp}")
-                set(compute_db_archive OFF)
-            endif()
-        endif()
-
-        if (compute_db_archive)
-            find_program(xmlstarlet NAMES xmlstarlet xml)
-            if (xmlstarlet)
-                execute_process(
-                    COMMAND "${xmlstarlet}" sel -D -B -t -c / "${corelib_mimetypes_resource_file}"
-                    OUTPUT_FILE "${mimetypes_resource_file_minified}"
-                    RESULT_VARIABLE failed_to_minify
-                )
-                if (NOT failed_to_minify)
-                    set(corelib_mimetypes_resource_file "${mimetypes_resource_file_minified}")
-                endif()
-            else()
-                message(STATUS "xmlstarlet command was not found. ${mime_types_resource_file} will not be minified.")
-            endif()
-
-            if (CMAKE_VERSION GREATER_EQUAL 3.19)
-                set(additional_file_archive_create_parameters COMPRESSION_LEVEL 9)
-            endif()
-
-            file(ARCHIVE_CREATE OUTPUT "${qmimeprovider_db_output}.archive"
-                PATHS "${corelib_mimetypes_resource_file}"
-                FORMAT raw
-                COMPRESSION ${qmime_db_compression}
-                ${additional_file_archive_create_parameters}
-            )
-            file(READ "${qmimeprovider_db_output}.archive" qmime_db_archive HEX)
-            file(SIZE "${qmimeprovider_db_output}.archive" qmime_db_archive_size)
-            file(SIZE "${corelib_mimetypes_resource_file}" qmime_db_resource_size)
-            file(REMOVE ${qmimeprovider_db_output}.archive)
-
-            string(APPEND qmime_db_content "static const unsigned char mimetype_database[] = { ")
-
-            string(REGEX MATCHALL "([a-f0-9][a-f0-9])" qmime_db_hex "${qmime_db_archive}")
-
-            list(TRANSFORM qmime_db_hex PREPEND "0x")
-            math(EXPR qmime_db_archive_size "${qmime_db_archive_size} - 1")
-            foreach(index RANGE 0 ${qmime_db_archive_size} 12)
-                list(APPEND index_list ${index})
-            endforeach()
-            list(TRANSFORM qmime_db_hex PREPEND "\n " AT ${index_list})
-            list(JOIN qmime_db_hex ", " qmime_db_hex_joined)
-
-            string(APPEND qmime_db_content "${qmime_db_hex_joined}")
-            string(APPEND qmime_db_content "\n};\n")
-            string(APPEND qmime_db_content "static constexpr size_t MimeTypeDatabaseOriginalSize = ${qmime_db_resource_size};\n")
-
-            file(WRITE "${qmimeprovider_db_output}" "${qmime_db_content}")
-
-            file(WRITE "${mimetypes_resfile_timestamp_file}" "${mimetypes_resfile_timestamp}")
+        set(archiving_api "CMake")
+        if(QT_FEATURE_zstd AND NOT QT_CMAKE_ZSTD_SUPPORT)
+            message(FATAL_ERROR
+                "CMake was not built with zstd support. "
+                "Rebuild CMake or set QT_AVOID_CMAKE_ARCHIVING_API=ON.")
         endif()
     endif()
 
-    target_sources(Core PRIVATE ${qmimeprovider_db_output})
-    set_source_files_properties(${qmimeprovider_db_output} PROPERTIES HEADER_FILE_ONLY TRUE)
-    target_include_directories(Core PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/.rcc")
-endif()
+    if(QT_FEATURE_zstd)
+        set(compression_type "zstd")
+    else()
+        set(compression_type "gzip")
+    endif()
 
-# special case end
+    # Generate qmimeprovider_database.cpp
+    set(qmimeprovider_db_output "${CMAKE_CURRENT_BINARY_DIR}/.rcc/qmimeprovider_database.cpp")
+    add_custom_command(OUTPUT "${qmimeprovider_db_output}"
+        COMMAND ${CMAKE_COMMAND}
+            -DINPUT_FILE=${corelib_mimetypes_resource_file}
+            -DOUTPUT_FILE=${qmimeprovider_db_output}
+            -DARCHIVING_API=${archiving_api}
+            -DCOMPRESSION_TYPE=${compression_type}
+            -P "${CMAKE_CURRENT_SOURCE_DIR}/QtCompressMimeDatabase.cmake"
+        DEPENDS
+            "${CMAKE_CURRENT_SOURCE_DIR}/QtCompressMimeDatabase.cmake"
+            "${corelib_mimetypes_resource_file}"
+        VERBATIM
+    )
+
+    qt_internal_extend_target(Core
+        SOURCES ${qmimeprovider_db_output}
+        INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}/.rcc"
+    )
+    set_source_files_properties(${qmimeprovider_db_output} PROPERTIES
+        GENERATED TRUE
+        HEADER_FILE_ONLY TRUE
+    )
+endif()
 
 qt_internal_extend_target(Core CONDITION WASM
     SOURCES
