Add an option to select the preferred compression type for mime type db
Add the '-mimetype-database-compression' command line argument that
allows to select the preferred compression type for the mime type
database, including 'none' compression type, which avoids mime type
database compression even if respective compression APIs are present
in the system. The argument has the CMake alias called
'INPUT_mimetype_database_compression'.

Change-Id: I66daddae7014d109fa175a5f397e984928f4ee47
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1250,7 +1250,21 @@ if(QT_FEATURE_mimetype AND QT_FEATURE_mimetype_database)
         endif()
     endif()
 
-    if(QT_FEATURE_zstd)
+    if(DEFINED INPUT_mimetype_database_compression)
+        set(supported_compression_types zstd gzip none)
+        if(INPUT_mimetype_database_compression IN_LIST supported_compression_types)
+            set(compression_type ${INPUT_mimetype_database_compression})
+        else()
+            message(FATAL_ERROR "Unknown mime type database compression is set:"
+            " ${INPUT_mimetype_database_compression}\nSupported compression types:\n"
+            "    ${supported_compression_types}")
+        endif()
+        if(compression_type STREQUAL "zstd" AND NOT QT_FEATURE_zstd)
+            message(FATAL_ERROR
+                "zstd compression is selected for mime type database, but the 'zstd'"
+                " feature is disabled.")
+        endif()
+    elseif(QT_FEATURE_zstd)
         set(compression_type "zstd")
     else()
         set(compression_type "gzip")
