Examples: Remove duplicated Qt6::PrintSupport link information
Some CMakeLists.txt files did link to Qt6::PrintSupport twice. Also
unify formatting and order of the linker step.

Change-Id: I4af935c5dc3de6c243aad8511b0803ceaa872589
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/examples/widgets/graphicsview/chip/CMakeLists.txt
+++ b/examples/widgets/graphicsview/chip/CMakeLists.txt
@@ -53,9 +53,7 @@ qt_add_resources(chip "images"
 )
 
 if(TARGET Qt6::PrintSupport)
-    target_link_libraries(chip PUBLIC
-        Qt6::PrintSupport
-    )
+    target_link_libraries(chip PUBLIC Qt6::PrintSupport)
 endif()
 
 install(TARGETS chip
