CMake:Android: add Android templates, bindings and gradle files to tree
Add Android templates, bindings and gradle wrapper files to custom
targets so they can be easily tracked by the project tree when using
Qt Creator for example.

Change-Id: I4144b9ee461139a9f768c57b14139e0fc21d4c28
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/src/3rdparty/gradle/CMakeLists.txt
+++ b/src/3rdparty/gradle/CMakeLists.txt
@@ -1,22 +1,44 @@
+set(gradle_programs
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradlew"
+)
+set(gradle_files
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradlew.bat"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradle.properties"
+)
+set(gradle_wrapper
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradle"
+)
+set(gradle_wrapper_files
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradle/wrapper/gradle-wrapper.properties"
+    "${CMAKE_CURRENT_SOURCE_DIR}/gradle/wrapper/gradle-wrapper.jar"
+)
+
+add_custom_target(Qt${QtBase_VERSION_MAJOR}GradleScripts
+    SOURCES
+        ${gradle_programs}
+        ${gradle_files}
+        ${gradle_wrapper_files}
+)
+
 qt_path_join(destination ${QT_INSTALL_DIR} "src/3rdparty/gradle")
+
 qt_copy_or_install(
     PROGRAMS
-        gradlew
+        ${gradle_programs}
     DESTINATION
         "${destination}"
 )
 
 qt_copy_or_install(
     FILES
-        gradlew.bat
-        gradle.properties
+        ${gradle_files}
     DESTINATION
         "${destination}"
 )
 
 qt_copy_or_install(
     DIRECTORY
-        gradle
+        ${gradle_wrapper}
     DESTINATION
         "${destination}"
 )
