--- a/src/android/java/CMakeLists.txt
+++ b/src/android/java/CMakeLists.txt
@@ -53,4 +53,11 @@ qt_path_join(destination ${QT_INSTALL_DIR} "src/android/java")
 qt_copy_or_install(DIRECTORY ${resource_directories}
                    DESTINATION "${destination}"
 )
+
+if(NOT QT_WILL_INSTALL)
+    qt_internal_copy_at_build_time(TARGET Qt${QtBase_VERSION_MAJOR}AndroidBindings
+        DIRECTORIES ${resource_directories}
+        DESTINATION ${destination})
+endif()
+
 # special case end
