Generally disable leak sanitizer in tests
Our tests have the unfortunate tendency to not clean up their resources;
as a consequence the leaksan check creates ton of (non-actionable)
warnings.
Our main focus for now are catching non-leak related issues via ASAN
(e.g. use-after-free).

The special casing for the cmake API tests stays in place in case we
want to re-enable leaksan checks for most tests again.

Task-number: QTQAINFRA-5315
Change-Id: I3e50ebf06ebd373f0ce0a4bb790ec8d38c344515
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Dimitrios Apostolou <jimis@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>

--- a/coin/instructions/cmake_run_ctest_enforce_exit_code.yaml
+++ b/coin/instructions/cmake_run_ctest_enforce_exit_code.yaml
@@ -31,7 +31,7 @@ instructions:
     instructions:
     - type: EnvironmentVariable
       variableName: ASAN_OPTIONS
-      variableValue: "malloc_context_size=100"
+      variableValue: "malloc_context_size=100:detect_leaks=0"
     - type: EnvironmentVariable
       # Override qt-testrunner as we don't want to gather test statistics
       # because many tests FAIL when built with ASAN.
