--- a/tests/auto/network/ssl/qocsp/CMakeLists.txt
+++ b/tests/auto/network/ssl/qocsp/CMakeLists.txt
@@ -15,6 +15,12 @@ qt_internal_add_test(tst_qocsp
         Qt::NetworkPrivate
 )
 
+qt_internal_extend_target(tst_qocsp CONDITION QT_FEATURE_openssl_linked
+    LIBRARIES
+        WrapOpenSSL::WrapOpenSSL
+)
+
+
 ## Scopes:
 #####################################################################
 
