Move qVersion() into it's own header
Partially reverts 50b05e3e2ad969abf4b939d5db2253380e47d775.

The move of qVersion() from qglobal.h into qlibraryinfo.h, a header
not included by qglobal.h, was a conscious, documented, QUIP-0006-
allowed, but stetching the SiC Type A definition, and therefore
unwarranted, SiC.

Fix by moving qVersion() into its own header file, qtversion.h,
included from qglobal.h.

[ChangeLog][Editorial] Remove the entry for qVersion() being moved to
qlibraryinfo.h.

Fixes: QTBUG-108818
Change-Id: I3524802348635512a63fbbb55ddc28ad28f331e8
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -95,6 +95,7 @@ qt_internal_add_module(Core
         global/qttranslation.h
         global/qttypetraits.h
         global/qtversionchecks.h
+        global/qtversion.h
         global/qtypeinfo.h
         global/qtypes.cpp global/qtypes.h
         ${core_version_tagging_files}
