Fix moc warning for qwineventnotifier.h on non-Windows platforms
Disable AUTOMOC for qwineventnotifier.h on non-Windows platforms.
Add a comment to remove qwineventnotifier.h from non-Windows platforms
for Qt7.

Fixes: QTBUG-107109
Change-Id: I8f769aa764daeb634211aca7114f94b50cc0a85d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -182,7 +182,6 @@ qt_internal_add_module(Core
         kernel/qtranslator.cpp kernel/qtranslator.h kernel/qtranslator_p.h
         kernel/qvariant.cpp kernel/qvariant.h
         kernel/qvariantmap.h kernel/qvarianthash.h kernel/qvariantlist.h
-        kernel/qwineventnotifier.h
         plugin/qfactoryinterface.cpp plugin/qfactoryinterface.h
         plugin/qfactoryloader.cpp plugin/qfactoryloader_p.h
         plugin/qplugin.h plugin/qplugin_p.h
@@ -564,7 +563,7 @@ qt_internal_extend_target(Core CONDITION WIN32
         kernel/qfunctions_win.cpp kernel/qfunctions_win_p.h kernel/qfunctions_winrt_p.h
         kernel/qsharedmemory_win.cpp
         kernel/qsystemsemaphore_win.cpp
-        kernel/qwineventnotifier.cpp kernel/qwineventnotifier_p.h
+        kernel/qwineventnotifier.cpp kernel/qwineventnotifier.h kernel/qwineventnotifier_p.h
         kernel/qwinregistry.cpp kernel/qwinregistry_p.h
         plugin/qsystemlibrary.cpp plugin/qsystemlibrary_p.h
         thread/qthread_win.cpp
@@ -585,6 +584,14 @@ qt_internal_extend_target(Core CONDITION WIN32
         mpr
         userenv
 )
+
+if(NOT WIN32)
+    ### Qt7: remove
+    # Make qwineventnotifier.h available on non-Windows platforms too for code bases that include
+    # it unconditionally.
+    qt_internal_extend_target(Core SOURCES kernel/qwineventnotifier.h)
+    set_source_files_properties(kernel/qwineventnotifier.h PROPERTIES SKIP_AUTOMOC ON)
+endif()
 
 qt_internal_extend_target(Core CONDITION WASM
     SOURCES
