tst_QString: test with QT_RESTRICTED_CAST_FROM_ASCII, too
QtBase didn't contain any checks for QT_RESTRICTED_CAST_FROM_ASCII, so
a recent addition to the QString::append/insert/prepend overload set
made calls with C string literal arguments ambiguous without the CI
noticing. We had a similar problem with QString::multiArg.

To increase test coverage, we now run tst_qstring two times:

- without any define
- with QT_RESTRICTED_CAST_FROM_ASCII (lots of changes necessary)

Most removals are expected, because they disable tests that check the
implicit conversions from QByteArray and const char*, but the
relational operators with QLatin1String objects might warrant fixing.

In some places, when the conversion wasn't the functionality under
test, replaced C string literals or QByteArrays with QLatin1String.

We should also test with QT_NO_CAST_FROM_ASCII, but that's even larger
surgery.

QString doesn't have a ctor from std::nullptr_t, so QString s =
nullptr; doesn't compile in C++17 mode, but does in C++20 mode, due to
the const char8_t* ctor.

Pick-to: 6.5 6.4 6.2 5.15
Change-Id: I0c5a31719a4b8dd585dd748e0ca0d99964866064
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>

--- a/tests/auto/corelib/text/qstring/CMakeLists.txt
+++ b/tests/auto/corelib/text/qstring/CMakeLists.txt
@@ -1,30 +1,30 @@
 # Copyright (C) 2022 The Qt Company Ltd.
 # SPDX-License-Identifier: BSD-3-Clause
 
-# Generated from qstring.pro.
+if(NOT QT_FEATURE_doubleconversion AND NOT QT_FEATURE_system_doubleconversion)
+    list(APPEND tst_qstring_extra_defines QT_NO_DOUBLECONVERSION)
+endif()
 
-#####################################################################
-## tst_qstring Test:
-#####################################################################
+if(APPLE)
+    list(APPEND tst_qstring_extra_libraries ${FWFoundation})
+    list(APPEND tst_qstring_extra_sources tst_qstring_mac.mm)
+endif()
 
-qt_internal_add_test(tst_qstring
-    SOURCES
-        tst_qstring.cpp
-    LIBRARIES
-        Qt::CorePrivate
-)
+foreach(test tst_qstring tst_qstring_restricted_ascii)
+    qt_internal_add_test(${test}
+        SOURCES
+            tst_qstring.cpp
+            ${tst_qstring_extra_sources}
+        LIBRARIES
+            Qt::CorePrivate
+            ${tst_qstring_extra_libraries}
+        DEFINES
+            ${tst_qstring_extra_defines}
+    )
+endforeach()
 
-## Scopes:
-#####################################################################
-
-qt_internal_extend_target(tst_qstring CONDITION NOT QT_FEATURE_doubleconversion AND NOT QT_FEATURE_system_doubleconversion
+qt_internal_extend_target(tst_qstring_restricted_ascii
     DEFINES
-        QT_NO_DOUBLECONVERSION
-)
-
-qt_internal_extend_target(tst_qstring CONDITION APPLE
-    SOURCES
-        tst_qstring_mac.mm
-    LIBRARIES
-        ${FWFoundation}
+        QT_RESTRICTED_CAST_FROM_ASCII
+        tst_QString=tst_QString_restricted_ascii
 )
